# rdf-parser

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py
include/Dice/RDF/: ParseTerm.hpp  Term.hpp  Triple.hpp
include/Dice/RDF/internal/: AbstractTriple.hpp
include/Dice/SPARQL/: TriplePattern.hpp  Variable.hpp
include/Dice/rdf-parser/: TurtleFileParser.hpp  TurtleStringParser.hpp
include/Dice/rdf-parser/Parser/Turtle/: Configurations.hpp  Grammar.hpp  Grammer.hpp
include/Dice/rdf-parser/Parser/Turtle/Actions/: Actions.hpp  BasicActions.hpp
include/Dice/rdf-parser/Parser/Turtle/Parsers/: AbstractParser.hpp  BaseFileParser.hpp  BaseStringParser.hpp  RdfConcurrentStreamParser.hpp  RdfFileParser.hpp  RdfStreamParser.hpp  RdfStringParser.hpp  TriplesBlockFileParser.hpp  TriplesBlockStringParser.hpp
include/Dice/rdf-parser/Parser/Turtle/States/: BasicState.hpp  ConcurrentState.hpp  SequentialState.hpp  State.hpp
include/Dice/rdf-parser/RDF/: Term.hpp  Triple.hpp
include/Dice/rdf-parser/Sparql/: TriplePatternElement.hpp  TripleVariable.hpp
include/Dice/rdf-parser/exception/: RDFParsingExecption.hpp
include/Dice/rdf-parser/internal/Exceptions/: InternalError.hpp  ParsingExecption.hpp
include/Dice/rdf-parser/internal/Turtle/: Configurations.hpp  Grammar.hpp
include/Dice/rdf-parser/internal/Turtle/Actions/: Actions.hpp  BasicActions.hpp
include/Dice/rdf-parser/internal/Turtle/Parsers/: AbstractParser.hpp  BaseStringParser.hpp  TriplesBlockStringParser.hpp
include/Dice/rdf-parser/internal/Turtle/States/: BasicState.hpp  ConcurrentState.hpp  SequentialState.hpp  State.hpp
include/Dice/rdf-parser/internal/exception/: InternalError.hpp
include/Dice/rdf-parser/internal/util/: ScopedThread.hpp
include/Dice/rdf-parser/util/: scoped_thread.hpp
include/Dice/rdf_parser/: TurtleParser.hpp
include/Dice/rdf_parser/Parser/Turtle/: Configurations.hpp  Grammer.hpp
include/Dice/rdf_parser/Parser/Turtle/Actions/: Actions.hpp  BasicActions.hpp  SparqlActions.hpp
include/Dice/rdf_parser/Parser/Turtle/Parsers/: AbstractParser.hpp  BaseFileParser.hpp  BaseStringParser.hpp  ConcurrentStreamParser.hpp  FileParser.hpp  RdfConcurrentStreamParser.hpp  RdfFileParser.hpp  RdfStreamParser.hpp  RdfStringParser.hpp  StreamParser.hpp  StringParser.hpp  TriplesBlockFileParser.hpp  TriplesBlockParser.hpp  TriplesParser.hpp
include/Dice/rdf_parser/Parser/Turtle/PartialGrammerParsers/: CollectionParser.hpp
include/Dice/rdf_parser/Parser/Turtle/States/: BasicState.hpp  ConcurrentState.hpp  State.hpp
include/Dice/rdf_parser/RDF/: Term.hpp  Triple.hpp
include/Dice/rdf_parser/Sparql/: TriplePatternElement.hpp  TripleVariable.hpp
include/Dice/sparql-parser/internal/: TriplesBlockStringParser.hpp
tests/: CMakeLists.txt  LiteralsTest.cpp  SparqlTriplesBlockParsingTests.cpp  TermParserTests.cpp  TermTests.cpp  TestTurtleParser.cpp  Tests.cpp  TurtleOfficalExamplesTest.cpp  TurtleOfficialEvaluationTests.cpp  TurtleOfficialNegativeEvaluationTests.cpp  TurtleOfficialNegativeTests.cpp  TurtleOfficialPositiveTests.cpp  TurtleParserConcurrentTests.cpp  TurtleParserFilesTests.cpp  TurtlePartialGrammerTests.cpp
